// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GSuitePrice it renders GSuitePrice with monthly prices 1`] = `
<div
  className="gsuite-price"
>
  <h4
    className="gsuite-price__price-per-user"
  >
    <span>
      <strong>
        $12
      </strong>
       per user / month
    </span>
  </h4>
  <h5
    className="gsuite-price__annual-price"
  >
    $144 billed yearly
  </h5>
</div>
`;

exports[`GSuitePrice it renders GSuitePrice without monthly prices 1`] = `
<div
  className="gsuite-price"
>
  <h4
    className="gsuite-price__price-per-user"
  >
    <span>
      <strong>
        $72
      </strong>
       per user / year
    </span>
  </h4>
</div>
`;
